[gd_scene load_steps=78 format=3 uid="uid://dp83ylqs4isw0"]

[ext_resource type="Script" path="res://insulting_scene.gd" id="1_58qa0"]
[ext_resource type="Resource" uid="uid://cq8mps7nn7vs7" path="res://Insults/line.tres" id="2_pfpcq"]
[ext_resource type="Resource" uid="uid://63757bkhg7mq" path="res://Insults/apes.tres" id="2_ulf60"]
[ext_resource type="Resource" uid="uid://b6pbahnecymw8" path="res://Insults/diaper.tres" id="3_4hrsk"]
[ext_resource type="Texture2D" uid="uid://dtuwbblwn4qtt" path="res://Chars/Male/Character 1/Clothes 1/Character1M_1_death_0.png" id="4_5csni"]
[ext_resource type="Resource" uid="uid://chbcdu6sne6g5" path="res://Insults/dog.tres" id="4_wj31x"]
[ext_resource type="Texture2D" uid="uid://b8f44x486a3k3" path="res://Chars/Male/Character 1/Clothes 1/Character1M_1_death_1.png" id="5_1qm7s"]
[ext_resource type="Resource" uid="uid://dkgkvpg4735t0" path="res://Insults/iq.tres" id="5_fmjxt"]
[ext_resource type="Texture2D" uid="uid://c2pg8b51muso" path="res://Chars/Male/Character 1/Clothes 1/Character1M_1_death_2.png" id="6_1ql0d"]
[ext_resource type="Resource" uid="uid://b4ji6cdws7lb" path="res://Insults/sleepy.tres" id="6_4s80q"]
[ext_resource type="Resource" uid="uid://bjk1e4ra4q836" path="res://Insults/tradewar.tres" id="7_gk7bb"]
[ext_resource type="Resource" uid="uid://dq8o7dmygiipr" path="res://Responses/borrow.tres" id="7_iorqj"]
[ext_resource type="Texture2D" uid="uid://dqkm5h67ug7if" path="res://Chars/Male/Character 1/Clothes 1/Character1M_1_death_3.png" id="7_jjsdq"]
[ext_resource type="Texture2D" uid="uid://cqcs1hy8t84hb" path="res://Chars/Male/Character 1/Clothes 1/Character1M_1_death_4.png" id="8_77g1d"]
[ext_resource type="Resource" uid="uid://bslicd3ya36ul" path="res://Responses/idiot.tres" id="8_jihh8"]
[ext_resource type="Resource" uid="uid://cwdlkhgt06r5m" path="res://Insults/covid.tres" id="8_tq2c0"]
[ext_resource type="Resource" uid="uid://ba0tu4v7cc7rk" path="res://Insults/son.tres" id="9_bt2gn"]
[ext_resource type="Texture2D" uid="uid://dxamt7ocearki" path="res://Chars/Male/Character 1/Clothes 1/Character1M_1_death_5.png" id="9_humbb"]
[ext_resource type="Resource" uid="uid://d0k25sa3xstk3" path="res://Responses/lullaby.tres" id="9_p7gqr"]
[ext_resource type="Resource" uid="uid://v76pi8rx3in5" path="res://Responses/reunion.tres" id="10_1dccu"]
[ext_resource type="Resource" uid="uid://0p76cclwwq40" path="res://Insults/rising.tres" id="10_dk2fr"]
[ext_resource type="Texture2D" uid="uid://bnp2igtbbij5s" path="res://Chars/Male/Character 1/Clothes 1/Character1M_1_death_6.png" id="10_yqg3x"]
[ext_resource type="Resource" uid="uid://ciytv2mac42wc" path="res://Insults/parrot.tres" id="11_h4kmi"]
[ext_resource type="Resource" uid="uid://bew4md5udeisd" path="res://Responses/taught.tres" id="11_ku1dh"]
[ext_resource type="Resource" uid="uid://dffnu3d8rpo0n" path="res://Insults/voice.tres" id="12_7ka5i"]
[ext_resource type="Resource" uid="uid://csfv6ei54c0ls" path="res://Responses/fakenews.tres" id="12_ljpic"]
[ext_resource type="Resource" uid="uid://dtowvoccv0uke" path="res://Responses/ridiculous.tres" id="13_y0or7"]
[ext_resource type="Resource" uid="uid://du8qa3urmb5u0" path="res://Responses/knowall.tres" id="14_dlp4g"]
[ext_resource type="Resource" uid="uid://ei45jw8niood" path="res://Insults/ideas.tres" id="14_qnee8"]
[ext_resource type="Texture2D" uid="uid://c8iefvxr4xp3v" path="res://BattleScene/1.png" id="15_awv0j"]
[ext_resource type="Resource" uid="uid://d0u6361bccvki" path="res://Insults/stupid.tres" id="15_l6xmc"]
[ext_resource type="Resource" uid="uid://cvvkqk4nnc18" path="res://Responses/bathroom.tres" id="15_o12kc"]
[ext_resource type="Resource" uid="uid://dtc41arvd0lda" path="res://Responses/notes.tres" id="16_nhm88"]
[ext_resource type="Resource" uid="uid://bctf8pie0kodb" path="res://Responses/where.tres" id="17_pdeto"]
[ext_resource type="Texture2D" uid="uid://der52arcktkib" path="res://Chars/Male/Character 1/Clothes 1/Character1M_1_damage_0.png" id="21_cugbm"]
[ext_resource type="Resource" uid="uid://bme2f3geg5ttp" path="res://Responses/comfortable.tres" id="21_tegw8"]
[ext_resource type="Texture2D" uid="uid://bfs8ekxkj6uiy" path="res://Chars/Male/Character 1/Clothes 1/Character1M_1_damage_1.png" id="22_a4x18"]
[ext_resource type="Resource" uid="uid://csdh2bxky1hc5" path="res://Responses/inflation.tres" id="22_ska3p"]
[ext_resource type="Texture2D" uid="uid://cfj5jh4dqrkbj" path="res://Chars/Male/Character 1/Clothes 1/Character1M_1_idle_0.png" id="23_f7wfn"]
[ext_resource type="Resource" uid="uid://bgeyd0e2d7l6d" path="res://Responses/president.tres" id="23_qkt2l"]
[ext_resource type="Resource" uid="uid://bdo5vg48dr4lg" path="res://Responses/understand.tres" id="24_kf3dx"]
[ext_resource type="Texture2D" uid="uid://dsbhcav28vj41" path="res://Chars/Male/Character 1/Clothes 1/Character1M_1_idle_1.png" id="24_rsmcl"]
[ext_resource type="Texture2D" uid="uid://c3dpvpm42kd27" path="res://Chars/Male/Character 1/Clothes 1/Character1M_1_idle_2.png" id="25_qn2vl"]
[ext_resource type="Texture2D" uid="uid://jnfa766txho0" path="res://Chars/Male/Character 1/Clothes 1/Character1M_1_idle_3.png" id="26_h4kn5"]
[ext_resource type="Texture2D" uid="uid://b2470jmqmv5g8" path="res://Chars/Male/Character 1/Clothes 1/Character1M_1_idle_4.png" id="27_tvw5l"]
[ext_resource type="Texture2D" uid="uid://bjpigaeyi6l1x" path="res://Chars/Male/Character 1/Clothes 1/Character1M_1_idle_5.png" id="28_d8mml"]
[ext_resource type="Texture2D" uid="uid://k42tps527rgq" path="res://Chars/Male/Character 1/Clothes 1/Character1M_1_idle_6.png" id="29_xnpor"]
[ext_resource type="Texture2D" uid="uid://coq2qvgl4e0ou" path="res://Chars/Male/Character 1/Clothes 1/Character1M_1_idle_7.png" id="30_ydq6x"]
[ext_resource type="Texture2D" uid="uid://slacwo7m1p1p" path="res://Chars/Male/Character 1/Clothes 1/Character1M_1_talk_0.png" id="31_bd07k"]
[ext_resource type="Texture2D" uid="uid://71ae62r21okf" path="res://Chars/Male/Character 1/Clothes 1/Character1M_1_talk_1.png" id="32_ck441"]
[ext_resource type="Texture2D" uid="uid://bbjgsq71xx50u" path="res://Chars/Male/Character 1/Clothes 1/Character1M_1_talk_2.png" id="33_545fv"]
[ext_resource type="Texture2D" uid="uid://l1cippac0sfg" path="res://Chars/Male/Character 1/Clothes 1/Character1M_1_talk_3.png" id="34_65mrk"]
[ext_resource type="Texture2D" uid="uid://ceo3tinvnopqc" path="res://Chars/Male/Character 1/Clothes 1/Character1M_1_talk_4.png" id="35_v1naq"]
[ext_resource type="Texture2D" uid="uid://df3mqoryfbctu" path="res://Chars/Male/Character 1/Clothes 1/Character1M_1_talk_5.png" id="36_0xi7l"]
[ext_resource type="Texture2D" uid="uid://jgr7hwlnokmo" path="res://Chars/Male/Character 1/Clothes 1/Character1M_1_talk_6.png" id="37_xjfg1"]
[ext_resource type="Texture2D" uid="uid://chh1co1slb2ku" path="res://Chars/Male/Character 2/Clothes 2/Character2M_2_use_00.png" id="40_dajp6"]
[ext_resource type="AudioStream" uid="uid://ge3m0xaqbjig" path="res://SFX/8-bit-arcade-138828.mp3" id="40_tpnsh"]
[ext_resource type="Texture2D" uid="uid://bdr4gte0qsuno" path="res://Chars/Male/Character 2/Clothes 2/Character2M_2_use_01.png" id="41_04q6t"]
[ext_resource type="AudioStream" uid="uid://cdpfuvxn50vje" path="res://SFX/hissing.mp3" id="41_hqooc"]
[ext_resource type="AudioStream" uid="uid://csi2ktjfv337k" path="res://SFX/crowd_shocked.wav" id="42_sgxbe"]
[ext_resource type="Texture2D" uid="uid://dhhagcvy4hsyx" path="res://Chars/Male/Character 2/Clothes 2/Character2M_2_use_02.png" id="42_xmrqp"]
[ext_resource type="AudioStream" uid="uid://27b84qpvcen5" path="res://SFX/laughandcheers.wav" id="43_eq60d"]
[ext_resource type="Texture2D" uid="uid://cfo13iwy3tvoa" path="res://Chars/Male/Character 2/Clothes 2/Character2M_2_use_03.png" id="43_jxh43"]
[ext_resource type="Texture2D" uid="uid://dhuh48rv06vp0" path="res://Chars/Male/Character 2/Clothes 2/Character2M_2_use_04.png" id="44_jfajw"]
[ext_resource type="Texture2D" uid="uid://buuuwnvdtg75y" path="res://Chars/Male/Character 2/Clothes 2/Character2M_2_use_05.png" id="45_xdq6j"]
[ext_resource type="Texture2D" uid="uid://ccrf2aoxkk1p0" path="res://Chars/Male/Character 2/Clothes 2/Character2M_2_use_06.png" id="46_fuw8m"]
[ext_resource type="Texture2D" uid="uid://dsmneyn2vxke7" path="res://Chars/Male/Character 2/Clothes 2/Character2M_2_use_07.png" id="47_ur334"]
[ext_resource type="Texture2D" uid="uid://dv2cw6j2rfm0i" path="res://Chars/Male/Character 2/Clothes 2/Character2M_2_use_08.png" id="48_lxptt"]
[ext_resource type="Texture2D" uid="uid://bidlm2b0rovd2" path="res://Chars/Male/Character 2/Clothes 2/Character2M_2_use_09.png" id="49_s2wa8"]
[ext_resource type="Texture2D" uid="uid://c25qbcbc483uh" path="res://Chars/Male/Character 2/Clothes 2/Character2M_2_use_10.png" id="50_550c8"]
[ext_resource type="Texture2D" uid="uid://ntbiqj0vc0gm" path="res://Chars/Male/Character 2/Clothes 2/Character2M_2_use_11.png" id="51_mnfk0"]
[ext_resource type="Texture2D" uid="uid://bcf26hpbr7kue" path="res://Chars/Male/Character 2/Clothes 2/Character2M_2_use_12.png" id="52_o2fpm"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_npx5q"]
load_path = "res://.godot/imported/2.png-b4bb4e73f41b318e86d3ea875a10ea27.ctex"

[sub_resource type="SpriteFrames" id="SpriteFrames_npjga"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_5csni")
}, {
"duration": 1.0,
"texture": ExtResource("5_1qm7s")
}, {
"duration": 1.0,
"texture": ExtResource("6_1ql0d")
}, {
"duration": 1.0,
"texture": ExtResource("7_jjsdq")
}, {
"duration": 1.0,
"texture": ExtResource("8_77g1d")
}, {
"duration": 1.0,
"texture": ExtResource("9_humbb")
}, {
"duration": 1.0,
"texture": ExtResource("10_yqg3x")
}],
"loop": false,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("21_cugbm")
}, {
"duration": 1.0,
"texture": ExtResource("22_a4x18")
}],
"loop": false,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("23_f7wfn")
}, {
"duration": 1.0,
"texture": ExtResource("24_rsmcl")
}, {
"duration": 1.0,
"texture": ExtResource("25_qn2vl")
}, {
"duration": 1.0,
"texture": ExtResource("26_h4kn5")
}, {
"duration": 1.0,
"texture": ExtResource("27_tvw5l")
}, {
"duration": 1.0,
"texture": ExtResource("28_d8mml")
}, {
"duration": 1.0,
"texture": ExtResource("29_xnpor")
}, {
"duration": 1.0,
"texture": ExtResource("30_ydq6x")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("31_bd07k")
}, {
"duration": 1.0,
"texture": ExtResource("32_ck441")
}, {
"duration": 1.0,
"texture": ExtResource("33_545fv")
}, {
"duration": 1.0,
"texture": ExtResource("34_65mrk")
}, {
"duration": 1.0,
"texture": ExtResource("35_v1naq")
}, {
"duration": 1.0,
"texture": ExtResource("36_0xi7l")
}, {
"duration": 1.0,
"texture": ExtResource("37_xjfg1")
}],
"loop": true,
"name": &"talk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("40_dajp6")
}, {
"duration": 1.0,
"texture": ExtResource("41_04q6t")
}, {
"duration": 1.0,
"texture": ExtResource("42_xmrqp")
}, {
"duration": 1.0,
"texture": ExtResource("43_jxh43")
}, {
"duration": 1.0,
"texture": ExtResource("44_jfajw")
}, {
"duration": 1.0,
"texture": ExtResource("45_xdq6j")
}, {
"duration": 1.0,
"texture": ExtResource("46_fuw8m")
}, {
"duration": 1.0,
"texture": ExtResource("47_ur334")
}, {
"duration": 1.0,
"texture": ExtResource("48_lxptt")
}, {
"duration": 1.0,
"texture": ExtResource("49_s2wa8")
}, {
"duration": 1.0,
"texture": ExtResource("50_550c8")
}, {
"duration": 1.0,
"texture": ExtResource("51_mnfk0")
}, {
"duration": 1.0,
"texture": ExtResource("52_o2fpm")
}],
"loop": true,
"name": &"use",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_kk7xp"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_vqcop"]
font_size = 36

[sub_resource type="LabelSettings" id="LabelSettings_lgtil"]
font_size = 48

[node name="InsultingScene" type="Node2D" node_paths=PackedStringArray("insult_label", "response_label")]
script = ExtResource("1_58qa0")
insults_don = Array[Resource("res://insult.gd")]([ExtResource("2_pfpcq"), ExtResource("3_4hrsk"), ExtResource("4_wj31x"), ExtResource("5_fmjxt"), ExtResource("6_4s80q")])
insults_joe_2020 = Array[Resource("res://insult.gd")]([ExtResource("7_gk7bb"), ExtResource("8_tq2c0")])
insults_joe_2024 = Array[Resource("res://insult.gd")]([ExtResource("9_bt2gn"), ExtResource("10_dk2fr"), ExtResource("11_h4kmi"), ExtResource("12_7ka5i"), ExtResource("2_ulf60"), ExtResource("14_qnee8"), ExtResource("15_l6xmc")])
responses_joe = Array[Resource("res://response.gd")]([ExtResource("7_iorqj"), ExtResource("8_jihh8"), ExtResource("9_p7gqr"), ExtResource("10_1dccu"), ExtResource("11_ku1dh")])
responses_don = Array[Resource("res://response.gd")]([ExtResource("7_iorqj"), ExtResource("8_jihh8"), ExtResource("9_p7gqr"), ExtResource("10_1dccu"), ExtResource("11_ku1dh"), ExtResource("21_tegw8"), ExtResource("22_ska3p"), ExtResource("23_qkt2l"), ExtResource("24_kf3dx")])
default_responses_don = Array[Resource("res://response.gd")]([ExtResource("12_ljpic"), ExtResource("13_y0or7"), ExtResource("14_dlp4g")])
default_responses_joe = Array[Resource("res://response.gd")]([ExtResource("15_o12kc"), ExtResource("16_nhm88"), ExtResource("17_pdeto")])
insult_label = NodePath("InsultLabel")
response_label = NodePath("ResponseLabel")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("15_awv0j")
centered = false

[node name="Crowd" type="Node" parent="Background"]

[node name="Layer1" type="Sprite2D" parent="Background"]
visible = false
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(2.21875, 2.21914)
texture = SubResource("CompressedTexture2D_npx5q")
centered = false

[node name="PlayerSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(220, 391)
scale = Vector2(7, 7)
sprite_frames = SubResource("SpriteFrames_npjga")
animation = &"die"
autoplay = "idle"

[node name="PlayerHPBar" type="ProgressBar" parent="."]
modulate = Color(1, 0.054902, 0.388235, 1)
offset_left = 90.0
offset_top = 204.0
offset_right = 110.0
offset_bottom = 504.0
max_value = 10.0
value = 5.0
fill_mode = 3
show_percentage = false

[node name="PlayerHPLabel" type="Label" parent="."]
offset_left = 194.0
offset_top = 219.0
offset_right = 248.0
offset_bottom = 253.0
text = "HP:3
"
label_settings = SubResource("LabelSettings_kk7xp")

[node name="EnemySprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1101, 391)
scale = Vector2(-7, 7)
sprite_frames = SubResource("SpriteFrames_npjga")
animation = &"use"
autoplay = "idle"

[node name="EnemyHPBar" type="ProgressBar" parent="."]
modulate = Color(1, 0.054902, 0.388235, 1)
offset_left = 1200.0
offset_top = 204.0
offset_right = 1220.0
offset_bottom = 504.0
max_value = 10.0
value = 5.0
fill_mode = 3
show_percentage = false

[node name="EnemyHPLabel" type="Label" parent="."]
offset_left = 1094.0
offset_top = 225.0
offset_right = 1148.0
offset_bottom = 259.0
text = "HP:3
"
label_settings = SubResource("LabelSettings_kk7xp")

[node name="PunchLineLabel" type="RichTextLabel" parent="."]
visible = false
custom_minimum_size = Vector2(300, 40)
offset_left = 624.0
offset_top = 366.0
offset_right = 664.0
offset_bottom = 406.0
text = "怎么，你想借一条用吗？"

[node name="OptionContainer" type="VBoxContainer" parent="."]
offset_left = 534.0
offset_top = 453.0
offset_right = 734.0
offset_bottom = 493.0

[node name="ProgressBar" type="ProgressBar" parent="OptionContainer"]
modulate = Color(1, 0, 0, 1)
custom_minimum_size = Vector2(200, 10)
layout_mode = 2
value = 50.0
show_percentage = false

[node name="InsultLabel" type="Label" parent="."]
offset_left = 344.0
offset_top = 127.0
offset_right = 872.0
offset_bottom = 195.0
text = "怎么，你想借一条用吗？"
label_settings = SubResource("LabelSettings_vqcop")

[node name="ResponseLabel" type="Label" parent="."]
offset_left = 448.0
offset_top = 206.0
offset_right = 976.0
offset_bottom = 274.0
text = "怎么，你想借一条用吗？"
label_settings = SubResource("LabelSettings_vqcop")
autowrap_mode = 2

[node name="GameOverPanel" type="Panel" parent="."]
visible = false
offset_left = 369.0
offset_top = 71.0
offset_right = 969.0
offset_bottom = 271.0

[node name="Label" type="Label" parent="GameOverPanel"]
layout_mode = 0
offset_left = 161.0
offset_top = 30.0
offset_right = 423.0
offset_bottom = 97.0
text = "Game Over"
label_settings = SubResource("LabelSettings_lgtil")

[node name="Button" type="Button" parent="GameOverPanel"]
layout_mode = 0
offset_left = 238.0
offset_top = 127.0
offset_right = 338.0
offset_bottom = 177.0
text = "Retry"

[node name="SFX" type="Node" parent="."]

[node name="BGMPlayer" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("40_tpnsh")
autoplay = true

[node name="HissSFX" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("41_hqooc")
volume_db = 12.0

[node name="ShockSFX" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("42_sgxbe")

[node name="LaughSFX" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("43_eq60d")

[connection signal="pressed" from="GameOverPanel/Button" to="." method="_on_button_pressed"]
